# renderrr

./: CMakeLists.txt  README.md  renderrr.ipynb
driver/: CMakeLists.txt  main.cpp  many_balls.cpp  three_balls.cpp
include/: camera.h  color.h  cuda_error_helper.cuh  cuda_header.cuh  image.h  light.h  material.h  object.h  ray.h  renderer.h  scene.h  util.h  vector.h
src/: CMakeLists.txt  color.cpp  image.cpp  light.cpp  material.cpp  object.cpp  ray.cpp  renderer.cpp  scene.cpp  util.cpp  vector.cpp
